GeneWeb version 2.06
--------------------

* Setup program
  - [Aug 16, 99] Renamed this program "gwsetup".
  - [Aug 16, 99] Fixed bug: sometimes tried to display a non-existent file
    "warnings.htm".

* GeneWeb Daemon/CGI (gwd)
  - [Aug 14, 99] Added ability to put notes for the data base itself (for
    a genera introduction, for example).
  - [Aug 14, 99] Fixed bug: send image in cgi mode under Windows did not
    work.
  - [Aug 13, 99] In personal pages notes, URLs are now clickable.
  - [Aug 13, 99] Added the ability to change the text of some pages:
    1/ for site address redirection (gwd new option "-redirect", see below),
    2/ for data base name change (gwf file field "renamed") and
    3/ detected robot exclusion (when option -robot_xcl has been set).
  - [Aug 13, 99] Fixed bug: when merging persons, the "other relations" where
    not included.
  - [Aug 8, 99] Added option "-redirect" to say to the users that the
    GeneWeb service has been redirected to some other address.

* Base configuration files (base.gwf)
  - [Aug 18, 99] Added a new variable "auth_file" in data bases configuration
    files (files ending with ".gwf") overriding the possible authorization
    file set by option "-auth" of gwd. Therefore now, each data base can have
    its specific global restricted access. See the template file "a.gwf".
    Works only in server (not cgi) mode.

GeneWeb version 2.05
--------------------

* General
  - [Aug 4, 99] In the distribution main directory, files README.txt (English)
    and LISEZMOI.txt (French), added a few lines of explanations for starting
    with GeneWeb.
  - [Jul 15, 99] Changed internal representation of strings in data bases.
    Should not make any differences while browsing. However, as it is a major
    internal change in the program, problems may appear (mainly in displaying
    or in access by name, first name, surname, title...): please report if any
    problem.

* Setup program