@@ -1,0 +1,418 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"
+            "http://www.w3.org/TR/REC-html40/loose.dtd">
+<head><title>GeneWeb - Restrictions d'acc&egrave;s</title></head>
+<body>
+<h1>GeneWeb - Restrictions d'acc&egrave;s</h1>
+
+Si votre base de donn&eacute;ees est visible sur le Web, vous voulez
+peut-&ecirc;tre disposer de moyens pour restreindre l'acc&egrave;s
+aux informations qui s'y trouvent.
+
+<p>
+
+Avec <em>GeneWeb</em>, vous pouvez:
+
+<ul>
+
+<li> Limiter les modifications en ligne: acc&egrave;s <a
+href="#Wiz">sorcier</a>.
+
+<li> Prot&eacute;ger les informations priv&eacute;es: acc&egrave;s <a
+href="#Fri">ami</a>.
+
+<li> Prot&eacute;ger l'acc&egrave;s global &agrave; une <a
+href="#DBA">base de donn&eacute;es</a>.
+
+<li> Prot&eacute;ger l'acc&egrave;s global au <a href="#GWA">service
+gwd</a>.
+
+</ul>
+
+<p>
+
+Si votre base de donn&eacute;es est h&eacute;berg&eacute;e sur un site,
+vous n'&ecirc;tes concern&eacute; que par les 3 premiers points.
+
+<p>
+
+Les deux derniers points (acc&egrave;s globaux) ne fonctionnent qu'en
+mode serveur. En mode cgi, il faut utiliser les moyens donn&eacute;s
+par le serveur HTTP dont vous d&eacute;pendez.
+
+<p>
+
+Puisqu'on est sur le sujet des restrictions d'acc&egrave;s, la section
+suivante concerne le probl&egrave;me des <a href="#Rob">robots</a> et
+les moyens de les emp&ecirc;cher de nuire. La derni&egrave;re section
+indique une m&eacute;thode encore plus brutale d'interdiction
+d'acc&egrave;s: la <a href="#Bla">liste noire</a>.
+
+<h4><a name="Wiz">Limitation des modifications: acc&egrave;s
+"sorcier"</a></h4>
+
+Si vous ne voulez pas que n'importe qui puisse faire des modifications
+en ligne, il faut mettre un mot de passe "sorcier" &agrave; votre base
+de donn&eacute;es.
+
+<p>
+
+Dans ce cas, seules les personnes ayant fourni le bon mot de passe
+"sorcier" auront droit aux modifications. Les autres pourront naviguer
+normalement mais ne verront pas de zone cliquable "mise &agrave; jour"
+zdans les pages personnelles.
+
+<p>
+
+Pour installer un mot de passe "sorcier", proc&eacute;dez comme suit:
+
+<p>
+
+<ul>
+
+<li>Si passez habituellement par le programme "setup", lancez "setup",
+allez dans le "menu principal" et s&eacute;lectionnez
+"param&egrave;tres d'une base de donn&eacute;es".  Indiquez un mot de
+passe "sorcier" et faites "Ok".
+
+<li>Si vous n'utilisez pas "setup", &eacute;ditez votre fichier
+"toto.gwf" (pour une base qui s'appelle "toto"). Si ce fichier
+n'existe pas, cr&eacute;ez-le en faisant une copie du fichier
+mod&egrave;le "a.gwf" fourni avec la distribution. Mettez votre mot de
+passe dans la variable "wizard_passwd". Par exemple:
+
+<pre>
+     wizard_passwd=xyzzy
+</pre>
+
+<li>Si votre base de donn&eacute;es est h&eacute;berg&eacute;e sur un
+site, demandez &agrave; l'administrateur du site de vous mettre un mot
+de passe "sorcier". Passez toujours par lui, par la suite, si vous voulez
+changer ce mot de passe.
+
+</ul>
+
+<p>
+
+Quand un mot de passe "sorcier" est install&eacute;, la page d'accueil
+(celle avec les drapeaux) vous donne une zone pour les mots de passe.
+
+<p>
+
+<ul>
+
+<li>En mode serveur, la page affiche "acc&egrave;s sorcier" sur lequel
+vous pouvez cliquer: votre navigateur vous fera alors appara&icirc;tre
+une fen&ecirc;tre o&ugrave; vous devez mettre le mot de passe dans la
+zone pr&eacute;vue (la zone "utilisateur" est ignor&eacute;e; vous
+pouvez y mettre ce que vous voulez).
+
+<li>En mode CGI ou s'il y a une autorisation globale d'acc&egrave;s
+(voir ci-dessous), c'est une zone d'entr&eacute;e qui est
+affich&eacute;e. Entrez votre mot de passe et faites "Ok" (dans ce
+cas, le mot de passe est visible et se verra dans l'URL pendant la
+navigation).
+
+</ul>
+
+<p>
+
+Apr&egrave;s l'entr&eacute;e du mot de passe, la page d'accueil doit
+s'afficher &agrave; nouveau. Vous pouvez rep&eacute;rer que vous
+&ecirc;tes en mode "sorcier" car devrait s'afficher le texte cliquable
+"modifier famille" ainsi que "modifier notes".
+
+<p>
+
+Dans la navigation, dans les pages personnelles, vous aurez
+acc&egrave;s &agrave; "mise &agrave; jour".
+
+<h4><a name="Fri">Protection des informations priv&eacute;es:
+acc&egrave;s "ami"</a></h4>
+
+Si vous voulez prot&eacute;ger les informations priv&eacute;es de
+votre base, il faut mettre un mot de passe "ami". Les donn&eacute;es
+priv&eacute;es concernent uniquement les personnes n&eacute;es depuis
+moins d'un si&egrave;cle et sont:
+
+<p>
+
+<ul>
+
+<li>Les dates et lieux de naissance, de d&eacute;c&egrave;s, de
+mariage, etc.
+
+<li>La profession.
+
+<li>Les notes.
+
+<li>L'image.
+
+<li>Les "autres relations" (parrains, marraines, parents adoptifs, etc).
+
+</ul>
+
+<p>
+
+Les autres informations g&eacute;n&eacute;alogiques (parents, enfants)
+restent toujours visibles.
+
+<p>
+
+S'il y a un mot de passe ami, seules les personnes ayant fourni ce mot
+de passe (ou le mot de passe "sorcier") pourront voir les
+donn&eacute;es priv&eacute;es.
+
+<p>
+
+Pour installer un mot de passe "ami", proc&eacute;dez comme pour le
+mot de passe "sorcier" ci-dessus. Si vous passez par le fichier
+"toto.gwf", la variable s'appelle "friend_passwd".
+
+<h4><a name="DBA">Restriction globale d'acc&egrave;s &agrave; une base
+de donn&eacute;es</a></h4>
+
+Si vous voulez que votre base de donn&eacute;es ne soit visible que
+par certaines personnes, vous pouvez mettre une restriction globale
+d'acc&egrave;s.
+
+<p>
+
+Attention: cela ne fonctionne qu'en mode serveur. Si vous &ecirc;tes
+en mode cgi, il faut utiliser les moyens fournis par le serveur HTTP
+dont vous d&eacute;pendez (la pr&eacute;sente documentation ne vous
+dit pas comment proc&eacute;der, car cela d&eacute;pend du serveur).
+
+<p>
+
+Il vous faut d'abord constituer un fichier d'autorisations. Ce fichier
+texte contient des lignes du genre "utilisateur:mot de passe". Par
+exemple:
+
+<p>
+
+<pre>
+     dupont:ex23zuu
+     martin:2wxuz4
+</pre>
+
+<p>
+
+Pour installer ce fichier d'autorisation, proc&eacute;dez comme suit:
+
+<p>
+
+<ul>
+
+<li>Copiez votre fichier dans le r&eacute;pertoire des bases de
+donn&eacute;es. Dans une installation standard, c'est le
+r&eacute;pertoire "gw". Puis &eacute;ditez votre fichier "toto.gwf"
+(si votre base s'appelle "toto"; si ce fichier n'existe pas, faites
+une copie du fichier mod&egrave;le "a.gwf" fourni avec la
+distribution). Mettez le nom du fichier d'autorisation que vous venez
+de constituer comme valeur de la variable "auth_file". Par exemple (si
+vous avez appel&eacute; votre fichier d'autorisation "toto.auth"):
+
+<pre>
+     auth_file=toto.auth
+</pre>
+
+<li>Si votre base de donn&eacute;es est h&eacute;berg&eacute;e sur un
+site, demandez &agrave; l'administrateur du site en envoyant votre
+fichier d'autorisations.
+
+</ul>
+
+<p>
+
+Au moment d'acc&eacute;der &agrave; la base de donn&eacute;es, votre
+navigateur affichera une fen&ecirc;tre o&ugrave; vous devrez donner un
+nom d'utilisateur valide et le mot de passe correspondant.
+
+<p>
+
+Dans l'exemple ci-dessus, il faudra mettre "dupont" dans la partie
+"utilisateur" et "ex23zuu" dans la partie "mot de passe", ou alors
+"martin" dans la partie "utilisateur" et "2wxuz4" dans la partie "mot
+de passe".
+
+<p>
+
+Si votre entr&eacute;e n'est pas valid&eacute;e, vous n'aurez aucun
+acc&egrave;s &agrave; la base de donn&eacute;es.
+
+<h4><a name="GWA">Restriction globale d'acc&egrave;s au service gwd</a></h4>
+
+Si vous voulez que le service gwd de votre site ne soit accessible que
+par certaines personnes, vous pouvez mettre une restriction globale
+d'acc&egrave;s au service.
+
+<p>
+
+Dans ce cas, toutes les bases de donn&eacute;es ne seront accessibles
+que par le protocole d'acc&egrave;s. Si, cependant, une certaine base
+a une restriction d'acc&egrave;s globale sp&eacute;cifique (voir
+section pr&eacute;c&eacute;dente), c'est plut&ocirc;t cette restriction
+sp&eacute;cifique qui sera prise en compte.
+
+<p>
+
+Attention: comme pour la section pr&eacute;c&eacute;dente, cela ne
+fonctionne qu'en mode serveur, pas en mode cgi.
+
+<p>
+
+Il faut &eacute;galement constituer un fichier d'autorisations. Cela
+ne peut &ecirc;tre g&eacute;r&eacute; que par l'administrateur du
+site: si votre base est h&eacute;berg&eacute;e ailleurs, cela ne vous
+concerne pas.
+
+<p>
+
+L'autorisation globale d'acc&egrave;s se fait dans les
+param&egrave;tres de la commande "gwd". L'option s'appelle "-auth" et
+doit &ecirc;tre suivie du nom du fichier d'autorisations.
+
+<h4><a name="Rob">Les robots</a></h4>
+
+Il arrive que certaines personnes envoient des "robots" sur votre
+site. Ces robots sont des programmes qui vont explorer votre site
+de mani&egrave;re syst&eacute;matique, par exemple en partant d'une
+certaine page et en "cliquant" sur tout ce qui est cliquable et
+en recommen&ccedil;ant sur les pages obtenues.
+
+<p>
+
+La plupart de ces robots sont de mauvaises id&eacute;es, parce que le
+nombre de pages possibles est pratiquement infini. Par exemple, si le
+robot part d'une page personnelle, clique sur "calcul de
+parent&eacute;" puis sur le conjoint, &ccedil;a va calculer tous les
+liens de parent&eacute; entre la personne et son conjoint, puis il
+peut encore cliquer sur tous les d&eacute;tails de ces liens, puis sur
+toutes les personnes interm&eacute;diraires, etc. etc.
+
+<p>
+
+L'id&eacute;e des personnes qui lancent des robots est souvent de se
+dire: plut&ocirc;t que de passer des heures &agrave; cliquer sur ce
+site int&eacute;ressant, je vais y t&eacute;l&eacute;charger toutes
+les pages et les lire tranquillement ensuite, chez moi, en
+lib&eacute;rant ma ligne t&eacute;l&eacute;phonique.
+
+<p>
+
+Malheureusement, comme le service <em>GeneWeb</em> est un labyrinthe
+sans sortie, cela ne fera qu'une seule chose: saturer le disque de
+la personne avec des pages HTML.
+
+<p>
+
+Du c&ocirc;t&eacute; du propri&eacute;taire du serveur, il n'est en
+g&eacute;n&eacute;ral pas content d'&ecirc;tre mitraill&eacute; de
+requ&ecirc;tes, pouvant aller parfois jusqu'&agrave; 10 par
+seconde, car:
+
+<p>
+
+<ul>
+
+<li>Cela ralentit son ordinateur,
+
+<li>Cela ralentit les autres utilisateurs qui consultent le site
+normalement,
+
+<li>Cela fausse compl&egrave;tement les statistiques d'acc&egrave;s au
+site,
+
+<li>Cela donne l'impression d&eacute;sagr&eacute;able d'&ecirc;tre
+espionn&eacute;.
+
+</ul>
+
+<p>
+
+Pourtant, les pages que <em>GeneWeb</em> fabrique indiquent
+explicitement aux robots (dans le protocole) de ne pas continuer
+l'exploration &agrave; partir de ces pages.
+
+<p>
+
+Les "bons" robots, ceux qui indexent les pages Web du monde entier,
+respectent ce protocole et n'insistent pas.  Mais quand on lance un
+robot, on peut tr&egrave;s bien lui dire de l'ignorer.
+
+<p>
+
+Contre ces derniers robots impolis, il existe l'option "-robot_xcl" de
+gwd. Elle est bas&eacute;e sur l'observation de la rapidit&eacute; des
+requ&ecirc;tes provenant d'un m&ecirc;me endroit.
+
+<p>
+
+Les param&egrave;tres sont deux nombres, s&eacute;par&eacute;s par une
+virgule. Le premier est un nombre "x" d'acc&egrave;s, le
+deuxi&egrave;me un nombre "y" de secondes. Si une adresse fait plus de
+"x" acc&egrave;s en moins de "y" secondes, l'adresse est alors
+automatiquement inscrite dans une liste noire et toutes les futures
+requ&ecirc;tes lui sont refus&eacute;es avec un message appropri&eacute;.
+
+<p>
+
+Exemple:
+
+<p>
+
+<pre>
+     gwd -robot_xcl 100,150
+</pre>
+
+<p>
+
+S'il y a d&eacute;tection de plus de 100 connexions en 150 secondes
+provenant d'un m&ecirc;me endroit, l'adresse de provenance se retrouve
+interdite d'acc&egrave;s jusqu'&agrave; ce que le propri&eacute;taire
+du site d&eacute;cide de la "lib&eacute;rer".
+
+<p>
+
+Pour lib&eacute;rer les adresses interdites, le propri&eacute;taire du
+site doit simplement supprimer le fichier de nom "robot" qui se trouve
+dans le r&eacute;pertoire "cnt". Cela lui est d'ailleurs
+indiqu&eacute; dans les traces d'acc&egrave;s.
+
+<h4><a name="Bla">La liste noire</a></h4>
+
+La liste noire permet d'interdire l'acc&egrave;s &agrave; un site
+<em>GeneWeb</em> &agrave; des adresses internet ou &agrave; des
+groupes d'adresses internet.
+
+<p>
+
+Il suffit de fabriquer un fichier qu'il faut appeler "gwd.xcl" et mettre
+dans le m&ecirc;me r&eacute;pertoire que la commande "gwd".
+
+<p>
+
+&Eacute;ditez ce fichier texte et indiquez-y les adresses que vous
+voulez refuser. Vous pouvez y mettre des "*" pour indiquer n'importe
+quelle s&eacute;quence de caract&egrave;res. Exemple:
+
+<pre>
+     grand-mechant@loup.bois
+     fournisseur-*@d.acces
+</pre>
+
+<p>
+
+Cela interdit d'acc&egrave;s les adresses "grand-mechant@loup.bois",
+"fournisseur-22@d.acces", "fournisseur-xx@d.acces", etc. Si vous
+mettez une ligne avec juste "*", toutes les adresses sont interdites
+(y compris la v&ocirc;tre).
+
+<p>
+
+Retour vers <a href="diruse.htm">Mode d'Emploi</a>.
+
+<p><hr><font size=-1><em>&copy; Copyright INRIA 1999 -
+GeneWeb</em></font><br>
+
+</body>
