@@ -38,6 +38,9 @@ base quand on a une nouvelle version de <em>GeneWeb</em>.
 
 <li> Comment installer <em>GeneWeb</em> en <a href="server.htm">serveur</a>.
 
+<li> Les <a href="access.htm">restrictions</a> d'acc&egrave;s &agrave;
+la base de donn&eacute;es.
+
 <li> Comment faire des <a href="update.htm">modifications</a> en ligne
 dans la base de donn&eacute;es.
 
