@@ -39,7 +39,8 @@ d&eacute;marrer.
 Pour configurer et d&eacute;marrer <em>GeneWeb</em>, vous devez
 utiliser des commandes int&eacute;ractives. Sous Unix, lancez un
 xterm. Sous Windows 95/NT, cliquez sur "D&eacute;marrer", "Programmes"
-et "Invite de Commandes".
+et "Invite de Commandes" (&ccedil;a s'appelle parfois "Commandes
+MSdos").
 
 <p>
 
