@@ -59,20 +59,22 @@ descend.cmo: adef.cmi config.cmi date.cmi def.cmi gutil.cmi perso.cmi \
     util.cmi ../wserver/wserver.cmi 
 descend.cmx: adef.cmx config.cmi date.cmx def.cmi gutil.cmx perso.cmx \
     util.cmx ../wserver/wserver.cmx 
+doc.cmo: util.cmi ../wserver/wserver.cmi 
+doc.cmx: util.cmx ../wserver/wserver.cmx 
 family.cmo: adef.cmi advSearchOk.cmo alln.cmo ascend.cmo birthDeath.cmo \
     birthday.cmo changeChildren.cmo config.cmi cousins.cmo date.cmi def.cmi \
-    descend.cmo gutil.cmi merge.cmi mergeFam.cmo mergeFamOk.cmo mergeInd.cmo \
-    mergeIndOk.cmo name.cmi notes.cmo num.cmi perso.cmi relation.cmo \
-    relationLink.cmo sendImage.cmo some.cmo srcfile.cmi title.cmo update.cmi \
-    updateFam.cmi updateFamOk.cmo updateInd.cmi updateIndOk.cmi util.cmi \
-    ../wserver/wserver.cmi family.cmi 
+    descend.cmo doc.cmo gutil.cmi merge.cmi mergeFam.cmo mergeFamOk.cmo \
+    mergeInd.cmo mergeIndOk.cmo name.cmi notes.cmo num.cmi perso.cmi \
+    relation.cmo relationLink.cmo sendImage.cmo some.cmo srcfile.cmi \
+    title.cmo update.cmi updateFam.cmi updateFamOk.cmo updateInd.cmi \
+    updateIndOk.cmi util.cmi ../wserver/wserver.cmi family.cmi 
 family.cmx: adef.cmx advSearchOk.cmx alln.cmx ascend.cmx birthDeath.cmx \
     birthday.cmx changeChildren.cmx config.cmi cousins.cmx date.cmx def.cmi \
-    descend.cmx gutil.cmx merge.cmx mergeFam.cmx mergeFamOk.cmx mergeInd.cmx \
-    mergeIndOk.cmx name.cmx notes.cmx num.cmx perso.cmx relation.cmx \
-    relationLink.cmx sendImage.cmx some.cmx srcfile.cmx title.cmx update.cmx \
-    updateFam.cmx updateFamOk.cmx updateInd.cmx updateIndOk.cmx util.cmx \
-    ../wserver/wserver.cmx family.cmi 
+    descend.cmx doc.cmx gutil.cmx merge.cmx mergeFam.cmx mergeFamOk.cmx \
+    mergeInd.cmx mergeIndOk.cmx name.cmx notes.cmx num.cmx perso.cmx \
+    relation.cmx relationLink.cmx sendImage.cmx some.cmx srcfile.cmx \
+    title.cmx update.cmx updateFam.cmx updateFamOk.cmx updateInd.cmx \
+    updateIndOk.cmx util.cmx ../wserver/wserver.cmx family.cmi 
 fpla.cmo: adef.cmi argl.cmo def.cmi gutil.cmi iobase.cmi 
 fpla.cmx: adef.cmx argl.cmx def.cmi gutil.cmx iobase.cmx 
 gutil.cmo: adef.cmi def.cmi name.cmi gutil.cmi 
