@@ -1,5 +1,5 @@
 (* camlp4r ./def.syn.cmo ./pa_html.cmo *)
-(* $Id: family.ml,v 2.24 1999-08-14 09:26:38 ddr Exp $ *)
+(* $Id: family.ml,v 2.25 1999-08-18 17:55:18 ddr Exp $ *)
 (* Copyright (c) 1999 INRIA *)
 
 open Def;
@@ -312,10 +312,17 @@ value family_m conf base =
       SendImage.print_del conf base
   | Some "DEL_IMAGE_OK" when conf.wizard && conf.can_send_image ->
       SendImage.print_del_ok conf base
+  | Some "DOC" ->
+      let v =
+        match p_getenv conf.env "v" with
+        [ Some f -> f
+        | None -> "" ]
+      in
+      Doc.print conf base v
   | Some "H" ->
       match p_getenv conf.env "v" with
       [ Some f -> Srcfile.print conf base f
-      | None -> () ]
+      | None -> Util.incorrect_request conf ]
   | Some "LB" when conf.wizard || conf.friend ->
       BirthDeath.print_birth conf base
   | Some "LD" when conf.wizard || conf.friend ->
